Add Docker support with Dockerfile and docker-compose.yml for backend and frontend services; update README.md with Docker usage instructions.